hphp/hack/test/typecheck/defined/conditional.php.exp
File "conditional.php", line 5, characters 10-11:
Variable $x is undefined, or not always defined (did you mean $b instead?) (Naming[2050])
